<resources>
    <string name="app_name">Student Database</string>
    <string name="UserNameText">User Id</string>
    <string name="UserId">Enter Your User Id</string>
    <string name="PasswordText">Password</string>
    <string name="PswHint">Enter Your Password</string>
    <string name="SubmitButton">Submit</string>
    <string name="Prompt"> Enter Details</string>
    <string name="title_activity_page3">Page_3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="Course">Course</string>
    <string name="Credit">Credit</string>
    <string name="Grade">Grade</string>

    <string name="Semester">Semester</string>
    <string name="Cumalative">Cumalative</string>s
    <string name="Total_Credit">Total Credit</string>
    <string name="Credit_Earned">Credit Earned</string>
    <string name="SGPA">SGPA</string>
    <string name="CGPA">CGPA</string>

    <string name="Name">Name</string>
    <string name="ID">Student ID</string>
    <string name="Select">Select Year</string>

    <string name="FirstYear">First Year Syllabus</string>
    <string name="SecondYear">Second Year Syllabus</string>
    <string name="ThirdYear">Third Year Syllabus</string>
    <string name="FourthYear">Fourth Year Syllabus</string>

    <string name="HINTforADD">value</string>


</resources>