<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".add_student">

    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="160dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_COURSE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:text="@string/Course"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/AD_CREDIT"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:text="@string/Credit"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/AD_GRADE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:text="@string/Grade"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:hyphenationFrequency="none"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <EditText
                android:id="@+id/AD_GRADE1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_GRADE2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_GRADE3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_GRADE4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_GRADE5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_GRADE6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_GRADE7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/AD_SUB8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/textview_border"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_CREDIT8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:hint="@string/HINTforADD"
                android:importantForAutofill="no"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/AD_GRADE8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/textview_border"
                android:importantForAutofill="no"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:onClick="Get_Input"
        android:text="@string/SubmitButton"
        android:background="@drawable/custom_button"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout3" />

    <TextView
        android:id="@+id/confirmation_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>